# athercore

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.backup.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  docker.yml
apps/api/: main.py
core/backtest/: run.py
core/signals/: sma.py
infra/docker/: Dockerfile
tests/: test_api.py  test_api_adj_close.py  test_api_endpoint.py  test_backtest_decreasing.py  test_backtest_random.py  test_backtest_run.py  test_sma.py  test_sma_signal.py
