[tool.poetry]
name = "athercore"
version = "0.1.0"
description = "Athercore trading system"
authors = ["Camer <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = "^2.12.2"
yfinance = "^0.2.66"
pandas = ">=2.0,<3.0"
numpy = ">=1.24,<2.0"
redis = "^6.4.0"
structlog = "^25.4.0"
prometheus-client = "^0.23.1"
pyyaml = "^6.0.3"
sqlalchemy = "^2.0.44"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
numba = "<0.60"
llvmlite = "<0.43"
vectorbt = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "hypothesis (>=6.141.0,<7.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "semgrep (>=1.139.0,<2.0.0)",
    "safety (>=3.6.2,<4.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
